[package]
name = "cosmos-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { version = "0.15.0", features = ["rpc", "grpc"] }
tonic = { version = "0.10.2", features = ["transport", "prost"] }
bip32 = { version = "0.5.1", features = ["bip39"] }
tendermint-rpc = { version = "0.34.0", features = ["websocket-client"] }
thiserror = "1.0.50"
hex = "0.4.3"
bytes = "1.5.0"
osmosis-std = { version = "0.21.0", optional = true }
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"

[features]
cosmwasm = ["cosmrs/cosmwasm"]
osmosis = ["osmosis-std"]
