[package]
name = "cosmos-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { version = "0.20.0", features = ["rpc", "grpc"] }
tonic = { version = "0.12.3", features = ["transport", "prost"] }
bip32 = { version = "0.5.2", features = ["bip39"] }
tendermint-rpc = { version = "0.39.1", features = ["websocket-client"] }
thiserror = "1.0.64"
hex = "0.4.3"
bytes = "1.7.2"
osmosis-std = { version = "0.26.0", optional = true }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"

[features]
cosmwasm = ["cosmrs/cosmwasm"]
osmosis = ["osmosis-std"]
